<resources>
    <string name="app_name">Eureka</string>
    <string name="email">מייל</string>
    <string name="emailhint">לדוגמא: israel.israeli@email.com</string>
    <string name="passwordhint">לדוגמא: 123456</string>
    <string name="password">סיסמא\n</string>
    <string name="fullname">שם מלא\n</string>
    <string name="fullnamehint">ישראל ישראלי\n</string>
    <string name="registerDescription">הרשמה למערכת</string>
    <string name="LoginDescription">התחברות</string>
    <string name="registertext">אין לכם משתמש עדיין? הרשמה</string>
    <string name="registerbuttontext">הרשמה</string>
    <string name="PostCreateDescription">יצירת פוסט</string>
    <string name="google_maps_key"></string>
    <string name="back">← חזרה</string>
    <string name="edit">ערוך</string>
    <string name="delete">מחק</string>
    <string name="post_image_description">תמונת פוסט</string>
</resources>
